--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ onnx>=1.10.0  # ONNX export
 onnx-simplifier>=0.3.6 # ONNX simplifier
 thop  # FLOPs computation
 # pytorch_quantization>=2.1.1
+# huggingface
+huggingface-hub>=0.11.1
